--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -4,7 +4,7 @@ server:
 
 spring:
   application:
-    name: musinsa-assessment
+    name: demo
   datasource:
     url: jdbc:h2:mem:testdb
     driver-class-name: org.h2.Driver
