테스트 로그가 콘솔에 표시되도록 변경

--- a/build.gradle
+++ b/build.gradle
@@ -23,6 +23,13 @@ repositories {
     mavenCentral()
 }
 
+test {
+    testLogging {
+        events "PASSED", "SKIPPED", "FAILED"
+        showStandardStreams = true
+    }
+}
+
 dependencies {
     implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
     implementation 'org.springframework.boot:spring-boot-starter-thymeleaf'
